# multigit

./: README.md  multigit.cabal  stack.yaml
app/: Main.hs
src/: Table.hs
